hphp/test/zend/good/ext/gettext/tests/config.skipif
<?hh
if (!extension_loaded("gettext")) echo "skip"; 
