hphp/test/zend/bad/ext/standard/tests/file/stream_enclosed.php.skipif
<?php
if (!function_exists('leak_variable')) die("skip only debug builds");